--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-image-gallery": "^1.2.8",
+    "react-new-window": "^1.0.1",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
