--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.8.1",
     "react": "^18.1.0",
     "react-bootstrap-icons": "^1.8.2",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^8.2.0",
+    "react-use-window-size": "^1.0.1",
     "swiper": "^8.1.4",
     "web-vitals": "^2.1.4"
   },
