--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react-image-gallery": "^1.2.8",
     "react-new-window": "^1.0.1",
     "react-paginate": "^8.1.4",
+    "react-read-more-read-less": "^1.0.7",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^8.2.0",
     "react-use-window-size": "^1.0.1",
+    "read-more-react": "^1.0.10",
     "swiper": "^8.1.4",
     "web-vitals": "^2.1.4"
   },
