--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion-icons/heroicons-outline": "^3.18.0",
     "@headlessui/react": "^1.6.0",
     "@heroicons/react": "^1.0.6",
+    "@material-tailwind/react": "^2.0.1",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
