--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "firebase": "^9.8.1",
+    "globby": "^13.2.2",
     "react": "^18.1.0",
     "react-axios": "^2.0.6",
     "react-bootstrap-icons": "^1.8.2",
@@ -27,10 +28,14 @@
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^8.2.0",
     "react-use-window-size": "^1.0.1",
     "read-more-react": "^1.0.10",
+    "sitemap": "^7.1.1",
+    "sitemap-generator": "^8.5.1",
+    "stream-http": "^3.2.0",
     "swiper": "^8.1.4",
     "web-vitals": "^2.1.4"
   },
@@ -38,7 +43,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+
+    "generate-sitemap": "node generate-sitemap.js"
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "react-snap": "^1.23.0",
     "tailwindcss": "^3.0.24"
   }
 }
