--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion-icons/heroicons-outline": "^3.18.0",
     "@headlessui/react": "^1.6.0",
     "@heroicons/react": "^1.0.6",
@@ -19,7 +20,6 @@
     "react-bootstrap-icons": "^1.8.2",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.1.0",
-    "react-fullscreen-image": "^0.0.3",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "react-image-gallery": "^1.2.8",
