--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap-icons": "^1.8.2",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-image-gallery": "^1.2.8",
